--- a/src/style/_models.scss
+++ b/src/style/_models.scss
@@ -22,11 +22,11 @@
         font-size: 10px;
 
         position: relative;
-        top: 6px;
+        vertical-align: middle
 
         display: inline-block;
 
-        margin: auto .3em;
+        margin: -2px 0 0;
 
         cursor: pointer;
         transition: transform .15s ease-in;
@@ -229,6 +229,11 @@ section.models
     font-size: 16px;
 
     @include text_headline($section-models-model-title-font-color);
+}
+
+.model .model .model-title
+{
+    font-size: 12px;
 }
 
 .model-deprecated-warning
